--- a/config_4b.yaml
+++ b/config_4b.yaml
@@ -1,8 +1,8 @@
 model:
-  base_path: gustavecortal/Piaget-0.6B
+  base_path: ../pretrained_models/models--gustavecortal--Piaget-4B/snapshots/13fbcb0b4574fa4daf4c5421d50c6bb76ba8689f
   tokenizer_trust_remote_code: true
 dataset:
-  name: Psychotherapy-LLM/PsychoCounsel-Preference
+  name: ../PsychoCounsel-Preference
   save_path: psychocounsel_processed
   add_no_think_suffix: r" \no_think"
   max_length: 1024
@@ -10,8 +10,9 @@ dataset:
   limit_train: null
   limit_test: null
 training:
+  resume_from_checkpoint: true
   torch_dtype: bfloat16
-  device_map: auto
+  device_map: None
   allow_tf32: true
   lora:
     r: 4
@@ -30,26 +31,26 @@ training:
   orpo:
     num_train_epochs: 1
     learning_rate: 0.0005
-    per_device_train_batch_size: 8
-    per_device_eval_batch_size: 8
-    gradient_accumulation_steps: 1
+    per_device_train_batch_size: 2
+    per_device_eval_batch_size: 2
+    gradient_accumulation_steps: 4
     logging_steps: 50
-    eval_steps: 1000
-    save_steps: 250
+    eval_steps: 2000
+    save_steps: 100
     max_length: 1024
     max_prompt_length: 128
     beta: 0.1
-    bf16: false
+    bf16: true
     remove_unused_columns: false
-    gradient_checkpointing: true
+    gradient_checkpointing: false
     report_to:
     - wandb
-    warmup_steps: 500
+    warmup_ratio: 0.1
     eval_strategy: steps
-  output_dir: piaget-1.7b-test-a100
+  output_dir: roger-4b
   soup:
     combination_types:
     - linear
-    - ties
+    - dare_ties
     weights: null
     density: 0.2
